# SIT223-7.1C

./: Jenkinsfile  pyproject.toml
tests/: test_main.py
