[tool.poetry]
name = "python-app"
version = "0.1.0"
description = ""
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "*"
flake8 = "*"
bandit = "*"
safety = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
